[package]
name = "discord-tracker-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
libopenmpt-sys = "0.3.0"
log = "0.4.22"
#reqwest = "0.12.9"
reqwest = "0.11.27"
songbird = { version = "0.4.3", features = ["serenity"], default-features = true }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.18"

[dependencies.serenity]
default-features = true
features = ["client", "standard_framework", "voice"]
version = "0.12"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"] # ...as well as any extras you need!
