[package]
name = "modulo"
version = "1.0.0-alpha1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
libopenmpt-sys = "0.3.0"
log = "0.4.22"
reqwest = "0.12.9"
sha256 = "1.5.0"
songbird = { version = "0.4.3", features = ["serenity"], default-features = true }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.18"

[dependencies.serenity]
default-features = true
features = ["client", "standard_framework", "voice", "cache"]
version = "0.12"

[dependencies.symphonia]
version = "0.5.2"
